--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express": "^4.16.3",
     "form-serialize": "^0.7.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "path": "^0.12.7",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-redux-loading": "^1.0.1",
     "react-router-dom": "^4.3.1",
